Mon Jun 19 14:18:10 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Mwahaha. Now the window is resized when rotation starts (to fit
	the rotated image in). Also, checks are drawn properly behind the
	image, and rotation works well in combination with pan and zoom.
	* Now that all that's done, rotation is slow as shit ;) We'll see
	if we can speed that up next ;)

Sun Jun 18 21:49:35 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* No more eesh. We use E ipc properly now. IPC code pinched from
	Eterm - thanks KainX.

Sun Jun 18 19:38:02 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Zooming is mostly fixed now. Works much better. A few little
	tweaks and we'll be laughing :-)

Sun Jun 18 16:11:47 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* More menu styles. Remove your ~/.fehrc (let it regenerate) and
	run feh -t wood, feh -t aluminium or feh -t aqua to see them.

Sun Jun 18 14:53:17 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Better eesh availability determination, and a check that E is
	actually being used at the time, too ;)

Sun Jun 18 13:46:59 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Now feh will query eesh for the number of desktops a user
	has. If eesh is there, and there is more than one, the background
	setting menu will offer a choice of which desktop to set.

Sun Jun 18 03:47:58 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay. Thanks to richlowe and me, the bg setting is getting
	pretty cool now. It uses eesh under E, but if it can't find it,
	nicely falls back to X calls. There are more options to come
	(choosing which desktop etc), but for now, things are pretty sweet
	;-)

Sun Jun 18 01:29:16 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* The first part of some background setting code from richlowe 
	<richlowe@btinternet.com> - more to come, it'll be sweet.
	* Doesn't work yet btw, so don't get excited ;)

Sun Jun 18 00:40:28 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
